# copilot_backend

./: .gitignore  README.md  READMe  chroma.sqlite3  generate_token.py  pyproject.toml  requirement.txt  requirements.txt
None/: chroma.sqlite3
chroma_path/: chroma.sqlite3
local_charts/: average_energy_consumption_comparison.html  average_energy_consumption_for_production_lines.html  average_energy_consumption_for_production_lines_1_and_2.html  average_value_of_first_5_tag_names.html  average_value_per_tagname_(first_5_rows).html  average_values_for_top_3_tagnames.html
src/: agent.py  test.py
src/ag_ui/: main.py
src/agent_session/: __init__.py  session.py
src/agents/config/examples/: session-production-line.json
src/agents/dto/: __init__.py  response.py
src/agents/dto/internal/: __init__.py  database.py  (+2 more)
src/agents/models/: historian.py
src/agents/repositories/: __init__.py  example.py  historian.py  reporting.py  vanna.py
src/agents/root_agent/: agent.py
src/agents/services/: __init__.py  custom_artifact_service.py  example.py  historian.py  reporting.py  vanna.py
src/agents/sub_agents/: __init__.py
src/agents/tools/: __init__.py  communications.py  data.py  examples.py  reporting.py  vanna.py
src/agents/utils/: utils.py
src/agents/vanna_agent/: agent.py  agent_executor.py  main.py  test_client.py  training.ipynb
src/backend/: __init__.py
src/backend/ag_ui/: main.py
src/backend/runner/: runner.py
src/core/: .env.development  __init__.py  config.py  dependencies.py  errors.py  interface.py  logger.py
src/runner/: runner.py
(+23 files in other folders)
